Fix: Corregir overflow de los enlaces

--- a/src/styles/components/content/link.module.scss
+++ b/src/styles/components/content/link.module.scss
@@ -1,5 +1,4 @@
 @mixin root {
-    width: 100%;
     background-image: linear-gradient(to right, #3c00ff 100%, #ffffff 0);
     background-position: 0 110%;
     background-repeat: repeat-x;
